# rocon_storytelling

./: .gitignore  README.md  turtlebot_motion.rosinstall
robosem_storytelling/: .cproject  .project  CMakeLists.txt  package.xml
robosem_storytelling/apps/robosem_storytelling/: robosem_storytelling.launch  robosem_storytelling.rapp
sat_apps/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
sat_apps/gradle/wrapper/: gradle-wrapper.properties
sat_apps/sat_app/: build.gradle
sat_apps/sat_app/src/main/: AndroidManifest.xml
sat_apps/sat_app/src/main/java/org/ros/android/sat_app/: MainActivity.java
sat_apps/sat_app/src/main/res/layout/: main.xml
sat_apps/sat_app/src/main/res/values/: strings.xml
storytelling/: .project  storytelling.html
storytelling/client/: test.js
storytelling/public/export/example/: example_2.html  template.html  test.html
storytelling_web/: settings.js  storytelling.css  storytelling.html  storytelling.js
storytelling_web/.meteor/: packages
storytelling_web/client/: roslib_meteor.js  test_function.js
storytelling_web/public/export/example/: example_1.html  template.html  test.html  test_motion_player.html  test_simple_android.html  test_simple_motion_player.html
storytelling_web/public/export/example/js/: base64.js
storytelling_web/server/: export.js  test_server.js
turtlebot_motion/: CMakeLists.txt  package.xml  setup.py
turtlebot_motion/launch/: .motion.launch.swp  motion.launch  motion_player.launch
turtlebot_motion/rapp/turtlebot_storytelling/: storytelling.interface  storytelling.launch  storytelling.rapp
turtlebot_motion/scripts/: turtlebot_motion.py  turtlebot_motion_player.py
turtlebot_motion/src/turtlebot_motion/: __init__.py  motion.py  motion_player.py  status.py
turtlebot_storytelling/: CMakeLists.txt  package.xml
turtlebot_storytelling/rapp/turtlebot_storytelling/: storytelling.rapp
turtlebot_storytelling/scripts/: storytelling.py
