<?xml version="1.0"?>
<package>
  <name>robosem_storytelling</name>
  <version>0.0.0</version>
  <description>The robosem_storytelling package</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/pal-robotics/reem_teleop/issues</url>
  <url type="repository">https://github.com/pal-robotics/reem_teleop</url>
  <url type="website">http://wiki.ros.org/robosem_storytelling</url>
  <author >Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>motion_retargeting</run_depend>
  <run_depend>robosem_motions</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
    <rocon_app>apps/robosem_storytelling/robosem_storytelling.rapp</rocon_app>
  </export>
</package>