<?xml version="1.0"?>
<package>
  <name>sat_apps</name>
  <version>0.1.0</version>
  <description>
    StoryTelling Authoring Tool Contents Player Device for TTS and Robot Face Displayer
  </description>
  <url type="repository">https://github.com/robotics-in-concert/rocon_storytelling/tree/android_app</url>
  <maintainer email="dwlee@yujinrobot.com">DongWook Lee</maintainer>
  <author email="dwlee@yujinrobot.com">DongWook Lee</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>zeroconf_jmdns_suite</build_depend>
  <!-- While not officially released -->
  <build_depend>rocon_rosjava_msgs</build_depend>
</package>
