<?xml version="1.0"?>
<package>
  <name>turtlebot_motion</name>
  <version>0.0.0</version>
  <description>The turtlebot_motion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dwlee@yujinrobot.com">Dongwook Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/turtlebot_motion</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>motion_retargeting_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rocon_app>rapp/turtlebot_storytelling/storytelling.rapp</rocon_app>
  </export>
</package>
